force-app/main/default/objects/Test_Suite__c/Test_Suite__c.object-meta.xml
<CustomObject>
    
    
    <label>Test Suite</label>
    <nameField>
        <label>Test Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Suites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>