force-app/main/default/objects/Test_Suite__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Test Suite Full Name</label>
    <type>TextArea</type>
</CustomField>